Grouping and seperators that obey grouping (Need to do some optimising)
So, this solution is a little fucked and honestly I'm not 100% sure it's optimal. The RAM cost is probably not great since it stores the entirety of the message before it inside of every message now (unless it is undefined) but this works for now and there's plenty of time to poke at it.

--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -293,9 +293,7 @@
 
 .message-block {
   padding: 1px 0;
-  &:not(:last-child) {
-    border-bottom: solid 1px $card-border-color;
-  }
+  border-top: solid 1px $card-border-color;
 }
 
 .message-own {
@@ -396,7 +394,7 @@
       border-radius: 2px;
     }
     .message-avatar-spacer {
-      height: 1px;
+      height: 0px;
     }
     .message-modern-inner {
       flex: 1;
@@ -426,7 +424,7 @@
       }
     }
     .message-content {
-      margin-top: 2px;
+      margin-top: 0px;
       min-width: 0;
       .bbcode {
         background: transparent;
