This is as close as you're going to get the highlight colour compared to the vanilla one w/ Bootstrap 5 color scaling without driving me into utter insanity.

--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -382,7 +382,10 @@
 }
 
 .message-highlight {
-  background-color: mix($white, $success, 10 * 8%);
+  background-color: color.change(
+    mix($white, $success, 7.5 * 8%),
+    $saturation: 50
+  );
   .message-time {
     background-color: mix($white, $success, 6 * 8%);
     color: mix($black, $success, 10 * 8%);
