fix: Correct aspect ratios for [icon] tags if they're not 1:1
Fixes #546

--- a/scss/_bbcode.scss
+++ b/scss/_bbcode.scss
@@ -212,6 +212,7 @@ div.indentText {
   &.icon {
     height: 50px;
     width: 50px;
+    object-fit: contain;
   }
   transition: opacity 0.25s;
   @media (prefers-reduced-motion: reduce) {
