--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -206,7 +206,9 @@ $bookmark-color: #66cc33 !default;
     max-height: 150px;
   }
 }
-
+#userInfo-avatar {
+  object-fit: contain;
+}
 .userInfo-buttons-container {
   display: flex;
   flex-wrap: wrap;
