Eicons once again fully stretch 1:1
Closes #584

--- a/scss/_bbcode.scss
+++ b/scss/_bbcode.scss
@@ -209,9 +209,12 @@ div.indentText {
   display: inline;
   height: 100px;
   width: 100px;
-  &.icon {
+  &.icon,
+  &.eicon {
     height: 50px;
     width: 50px;
+  }
+  &.icon {
     object-fit: contain;
   }
   transition: opacity 0.25s;
